# ros_inemo_m1_imu

./: .travis.yml  CMakeLists.txt  README.md  ST-iNemo_M1-IMU.rosinstal  package.xml
launch/: inemo-m1.launch
src/: inemo_m1_node.cpp
src/driver/include/: cmobilewinmean.h  inemo_m1_driver.h
src/driver/incluse/: cmobilewinmean.h
src/driver/src/: cmobilewinmean.cpp  inemo_m1_driver.cpp
